feat: customer side logout

--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -36,6 +36,9 @@
 
     <!-- toastify (for quick notifications) -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+
+    <!-- firebase (for database) -->
+    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
   </head>
   <body
     class="relative flex min-h-screen cursor-default flex-col bg-gradient-to-br from-orange-50 to-orange-100"
