--- a/src/html/customer_login.html
+++ b/src/html/customer_login.html
@@ -34,7 +34,9 @@
 
     <!-- firebase (for database) -->
     <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js"></script>
+
+    <!-- toastify (for quick notifications) -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body
     class="min-h-screen cursor-default overflow-y-auto bg-gradient-to-br from-gray-900 via-gray-800 to-black lg:overflow-x-hidden"
