--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -285,8 +285,8 @@
                 class="group inline-flex transform items-center justify-center rounded-lg bg-white px-8 py-4 text-base font-semibold text-orange-700 shadow-lg transition-all duration-300 hover:-translate-y-1 hover:bg-orange-50 hover:shadow-xl"
               >
                 <div class="me-2">📙</div>
-                <div class="sm:hidden md:hidden lg:hidden xl:flex">Click to Start Booking</div>
-                <div class="hidden sm:flex md:flex lg:flex xl:hidden">Start Booking</div>
+                <div class="sm:hidden md:hidden lg:hidden xl:flex">Click to Reserve Facility</div>
+                <div class="hidden sm:flex md:flex lg:flex xl:hidden">Reserve Facility</div>
               </a>
               <a
                 href=""
