--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 class="flex items-center overflow-hidden rounded-xl shadow-lg"
               >
                 <a
-                  href="/src/html/customer_login.html"
+                  href="/login"
                   class="-mx-2 flex transform items-center gap-3 bg-gradient-to-r from-yellow-500 to-orange-500 px-8 py-3 font-bold text-white transition-all duration-300 hover:scale-105 hover:from-orange-500 hover:to-red-500"
                 >
                   <svg
@@ -265,7 +265,7 @@
         <!-- mobile view: login dropdown options -->
         <div id="mobile-menu" class="mt-6 hidden space-y-3 lg:hidden">
           <a
-            href="/src/html/customer_login.html"
+            href="/login"
             class="block w-full rounded-xl bg-gradient-to-r from-yellow-500 to-orange-600 px-6 py-3 text-center font-bold text-white shadow-lg"
           >
             <!-- 🔑 CLIENT -->
@@ -344,7 +344,7 @@
           </p>
           <div class="flex flex-col gap-4 lg:flex-row">
             <a
-              href="/src/html/customer_login.html"
+              href="/login"
               class="group flex transform items-center justify-center gap-2 rounded-xl bg-white px-8 py-4 text-lg font-bold text-orange-600 transition-all duration-300 hover:scale-105 hover:bg-orange-50 hover:shadow-2xl"
             >
               Get Started
@@ -2589,7 +2589,7 @@
                   </div>
 
                   <a
-                    href="/src/html/customer_login.html"
+                    href="/login"
                     class="block w-full transform rounded-2xl border border-black bg-gradient-to-r from-yellow-400 to-yellow-500 px-8 py-4 font-black tracking-wide text-black shadow-lg transition-all duration-300 hover:scale-105 hover:from-yellow-300 hover:to-yellow-400 hover:shadow-xl hover:shadow-yellow-600"
                   >
                     Join Now 👑
@@ -2672,7 +2672,7 @@
                   </div>
 
                   <a
-                    href="/src/html/customer_login.html"
+                    href="/login"
                     class="block w-full transform rounded-2xl border border-black bg-gradient-to-r from-yellow-400 to-yellow-500 px-8 py-4 font-black tracking-wide text-black shadow-lg transition-all duration-300 hover:scale-105 hover:from-yellow-300 hover:to-yellow-400 hover:shadow-xl hover:shadow-yellow-600"
                   >
                     Join Now 🎓
@@ -2723,21 +2723,21 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="/src/html/about_us.html"
+                  href="/about"
                   class="text-gray-400 transition-colors hover:text-white"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/html/privacy_policy.html"
+                  href="/privacy"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Privacy Policy</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/html/terms_of_service.html"
+                  href="/terms"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Terms of Service</a
                 >
@@ -2876,12 +2876,12 @@
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
               <a
-                href="/src/html/privacy_policy.html"
+                href="/privacy"
                 class="text-sm transition-colors hover:text-white"
                 >Privacy Policy</a
               >
               <a
-                href="/src/html/terms_of_service.html"
+                href="/terms"
                 class="text-sm transition-colors hover:text-white"
                 >Terms of Service</a
               >
