--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -513,7 +513,7 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="/src/modules_html/customer_side/about_us.html"
+                  href="/src/html/dashboard/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   About Us
@@ -521,7 +521,7 @@
               </li>
               <li>
                 <a
-                  href="/src/modules_html/customer_side/privacy_policy.html"
+                  href="/src/html/about/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   Privacy Policy
@@ -529,7 +529,7 @@
               </li>
               <li>
                 <a
-                  href="/src/modules_html/customer_side/terms_of_service.html"
+                  href="/src/html/terms/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   Terms of Service
@@ -661,13 +661,13 @@
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
               <a
-                href="/src/modules_html/customer_side/privacy_policy.html"
+                href="/src/html/privacy/index.html"
                 class="text-sm transition-colors hover:text-white"
               >
                 Privacy Policy
               </a>
               <a
-                href="/src/modules_html/customer_side/terms_of_service.html"
+                href="/src/html/terms/index.html"
                 class="text-sm transition-colors hover:text-white"
               >
                 Terms of Service
