--- a/src/html/about/index.html
+++ b/src/html/about/index.html
@@ -121,7 +121,7 @@
                 class="flex items-center overflow-hidden rounded-xl shadow-lg"
               >
                 <a
-                  href="/src/modules_html/customer_side/login.html"
+                  href="/src/html/login/index.html"
                   class="-mx-2 flex transform items-center gap-3 bg-gradient-to-r from-yellow-500 to-orange-500 px-8 py-3 font-bold text-white transition-all duration-300 hover:scale-105 hover:from-orange-500 hover:to-red-500"
                 >
                   <svg
@@ -548,21 +548,21 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="/src/modules_html/about_us.html"
+                  href="/src/html/about/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/modules_html/privacy_policy.html"
+                  href="/src/html/privacy/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Privacy Policy</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/modules_html/terms_of_service.html"
+                  href="/src/html/terms/index.html"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Terms of Service</a
                 >
@@ -701,12 +701,12 @@
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
               <a
-                href="/src/modules_html/privacy_policy.html"
+                href="/src/html/privacy/index.html"
                 class="text-sm transition-colors hover:text-white"
                 >Privacy Policy</a
               >
               <a
-                href="/src/modules_html/terms_of_service.html"
+                href="/src/html/terms/index.html"
                 class="text-sm transition-colors hover:text-white"
                 >Terms of Service</a
               >
