--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -281,7 +281,7 @@
             <!-- buttons -->
             <div class="flex flex-col gap-4 pt-4 sm:flex-row">
               <a
-                href=""
+                href="#calendarSection"
                 class="group inline-flex transform items-center justify-center rounded-lg bg-white px-8 py-4 text-base font-semibold text-orange-700 shadow-lg transition-all duration-300 hover:-translate-y-1 hover:bg-orange-50 hover:shadow-xl"
               >
                 <div class="me-2">📙</div>
@@ -359,7 +359,7 @@
       </section>
 
       <!-- Calendar and Quick Info Container -->
-      <section class="flex flex-1 flex-col lg:flex-row">
+      <section id="calendarSection" class="flex flex-1 flex-col lg:flex-row">
         <!-- Calendar Container -->
         <div class="w-full flex-1">
           <div id="customerCalendar" class="h-full min-h-[400px] w-full md:min-h-[600px] lg:min-h-[700px]"></div>
