1. Change regular to daily, tab name logbooks module ✅ 2. remove action buttons in data control module ✅ 3. merge Regular/daily and Students ✅ 4. add price rate column to the Monthly Users ✅

--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -368,7 +368,7 @@
         <!-- Quick Info Sidebar -->
         <div class="w-full border-t border-orange-200 bg-white/70 lg:w-96 lg:border-l lg:border-t-0">
           <div class="h-full px-4 py-6">
-            <h3 class="mb-3 flex justify-center text-lg font-bold text-orange-900">Reserve Facility</h3>
+            <h3 class="mb-3 flex justify-center text-lg font-bold text-orange-900">Reserve Facilities</h3>
             <div id="customerReservationQuick" class="h-full overflow-y-auto pr-1">
               <form id="bookingForm" class="space-y-4 text-sm">
                 <!-- Choose Service -->
