--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -220,7 +220,7 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Regular Check-Ins Logbook::Monthly Check-Ins Logbook"
+          data-tabtitles="Daily Check-Ins Logbook::Monthly Check-Ins Logbook"
           data-subtitles="All regular customer check-ins::All monthly customer check-ins"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
@@ -422,16 +422,16 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Monthly Users::Regular / Daily Users::Students::Supplements / Products::Reservations"
-          data-subtitles="Monthly Users::Regular / Daily Users::Students::Supplements / Products::Reservations"
+          data-tabtitles="Monthly Users::Daily Check-ins::Supplements / Products::Reservations"
+          data-subtitles="Monthly Users::Daily Check-ins::Supplements / Products::Reservations"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
-          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Amount//Renewal Amount]::[ID//Type//Client Name//Time In//Amount]::[ID//Type//Client Name//Time In//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
-          data-listdatasortby="[name//name//name//date//date//number//number//date]::[name//name//name//date]::[name//name//name//date]::[name//name//number//number//number//name//number//number//date]::[name//name//name//date//date//number//number]"
-          data-listitembtnids="[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]"
-          data-listitembtntexts="[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]"
-          data-listitembtncolors="[orange]::[orange]::[orange]::[orange]::[orange]"
+          data-listemptytexts="No monthly members found::No regular/daily or student users found::No supplement sales found::No reservations found"
+          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Price Rate//Amount//Renewal Amount]::[ID//Type//Client Name//Log Date & Time//Price Rate//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
+          data-listdatasortby="[name//name//name//name//date//date//name//number//number]::[name//name//name//date//name//number]::[name//name//number//number//number//name//number//number//date]::[name//name//name//date//date//number//number]"
+          data-listitembtnids="[]::[]::[]::[]"
+          data-listitembtntexts="[]::[]::[]::[]"
+          data-listitembtncolors="[]::[]::[]::[]"
         ></div>
       </section>
 
