add: disposed products metrics count

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -320,10 +320,10 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="0::0::0::0::0::0"
-          data-startingtexts="::::::::::::"
-          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Least Selling::Super Low Stock"
-          data-endingtexts="Products::Products::Products::Products::Products::Products"
+          data-toggles="0::0::0::0::0::0::0"
+          data-startingtexts="::::::::::::::::"
+          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Least Selling::Super Low Stock::Disposed"
+          data-endingtexts="Products::Products::Products::Products::Products::Products::Products"
         ></div>
         <div
           id="section-content"
