fix: index.html

--- a/index.html
+++ b/index.html
@@ -3137,7 +3137,7 @@
     <script type="module" src="/src/js/modal.js"></script>
     <!-- add new js here 👆 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js"></script>
-    <script src="/src/js/customer_modules/customer.calendar.js"></script>
+    <script type="module" src="/src/js/customer_modules/customer_calendar.js"></script>
     <!-- announcement loader -->
     <script type="module" src="/src/js/landing_modules/announcement-loader.js"></script>
   </body>
