--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -436,7 +436,7 @@
                       min="07:00"
                       max="23:00"
                       class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
-                      required
+                      disabled
                     />
                     <p class="mt-1 text-xs text-gray-500">Last session ends at 11:00 PM</p>
                   </div>
