--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -409,6 +409,27 @@
                   <p class="mt-2 text-xs">Check our live calendar to see all available time slots!</p>
                 </div>
 
+                <!-- Duration -->
+                <div>
+                  <label for="duration" class="mb-1 block text-xs font-semibold text-gray-700">Duration</label>
+                  <select
+                    id="duration"
+                    name="duration"
+                    class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
+                    required
+                  >
+                    <option value="">Select duration</option>
+                    <option value="1">1 hour</option>
+                    <option value="2">2 hours</option>
+                    <option value="3">3 hours</option>
+                    <option value="4">4 hours</option>
+                    <option value="5">5 hours</option>
+                    <option value="6">6 hours</option>
+                    <option value="7">7 hours</option>
+                  </select>
+                </div>
+                <p id="timeError" class="hidden text-xs text-red-600" aria-live="polite"></p>
+
                 <!-- Time inputs in grid for mobile -->
                 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
                   <!-- Start Time -->
@@ -441,8 +462,6 @@
                     <p class="mt-1 text-xs text-gray-500">Last session ends at 11:00 PM</p>
                   </div>
                 </div>
-                <p id="timeError" class="hidden text-xs text-red-600" aria-live="polite"></p>
-
                 <!-- Select Date -->
                 <div>
                   <label for="bookingDate" class="mb-1 block text-xs font-semibold text-gray-700">Select Date</label>
