add: new coach picture

--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
               >
                 <div class="relative overflow-hidden">
                   <img
-                    src="/src/images/trainer_image_2.jpg"
+                    src="/src/images/modern aplha male.jpg"
                     class="h-80 w-full transform object-cover object-[center_25%] transition-transform duration-300 group-hover:scale-105"
                   />
                   <div
@@ -1192,10 +1192,10 @@
                       Multi-Specialist
                     </div>
                     <h3 class="mb-2 text-2xl font-bold text-gray-900">
-                      Coach Ron
+                      Modern Alpha Male
                     </h3>
                     <p class="mb-4 text-lg font-semibold text-orange-600">
-                      Full Time Best Teacher and Part Time Coach
+                      Full Time Coach
                     </p>
                     <p class="mb-6 leading-relaxed text-gray-600">
                       Specializing in strength training and weight loss with
