--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -368,18 +368,18 @@
         <!-- Quick Info Sidebar -->
         <div class="w-full border-t border-orange-200 bg-white/70 lg:w-96 lg:border-l lg:border-t-0">
           <div class="h-full px-4 py-6">
-            <h3 class="mb-3 flex justify-center text-lg font-bold text-orange-900">Reserve Facilities</h3>
+            <h3 class="mb-3 flex justify-center text-lg font-bold text-orange-900">Reserve Facility</h3>
             <div id="customerReservationQuick" class="h-full overflow-y-auto pr-1">
               <form id="bookingForm" class="space-y-4 text-sm">
                 <!-- Choose Service -->
                 <div>
-                  <label class="mb-1 block text-xs font-semibold text-gray-700">Choose Service</label>
+                  <label class="mb-1 block text-xs font-semibold text-gray-700">Reservation Type</label>
                   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
                     <label
                       class="flex cursor-pointer items-center justify-center rounded-md border border-orange-300 bg-white px-3 py-2 font-medium text-orange-700 hover:bg-orange-50"
                     >
-                      <input type="radio" name="service" value="Basketball Court" class="hidden" checked />
-                      <span class="text-xs sm:text-sm">Basketball Court</span>
+                      <input type="radio" name="service" value="Basketball" class="hidden" checked />
+                      <span class="text-xs sm:text-sm">Basketball</span>
                     </label>
                     <label
                       class="flex cursor-pointer items-center justify-center rounded-md border border-orange-300 bg-white px-3 py-2 font-medium text-orange-700 hover:bg-orange-50"
