add: expiration date to the data control

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -427,8 +427,8 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No monthly members found::No regular/daily or student users found::No supplement sales found::No reservations found"
-          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Price Rate//Amount//Renewal Amount]::[ID//Type//Client Name//Log Date & Time//Price Rate//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
-          data-listdatasortby="[name//name//name//name//date//date//name//number//number]::[name//name//name//date//name//number]::[name//name//number//number//number//name//number//number//date]::[name//name//name//date//date//number//number]"
+          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Price Rate//Amount//Renewal Amount]::[ID//Type//Client Name//Log Date & Time//Price Rate//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Quantity Sold//Total Sales//Expiration Date//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
+          data-listdatasortby="[name//name//name//name//date//date//name//number//number]::[name//name//name//date//name//number]::[name//name//number//number//number//name//number//number//date//date]::[name//name//name//date//date//number//number]"
           data-listitembtnids="[]::[]::[]::[]"
           data-listitembtntexts="[]::[]::[]::[]"
           data-listitembtncolors="[]::[]::[]::[]"
