fix: remove admin login to the pages

--- a/src/html/about/index.html
+++ b/src/html/about/index.html
@@ -146,7 +146,7 @@
                   <!-- 🔑 CLIENT (in case client doesn't like this) -->
                   Let's Go
                 </a>
-                <button
+                <!-- <button
                   id="dropdown-toggle"
                   class="flex scale-105 transform items-center bg-orange-500 px-3 py-4 font-bold text-white transition-all duration-300 hover:bg-red-500"
                 >
@@ -162,11 +162,11 @@
                       d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                     />
                   </svg>
-                </button>
+                </button> -->
               </div>
 
               <!-- admin dropdown -->
-              <div
+              <!-- <div
                 id="dropdown-menu"
                 class="ring-opacity-5 absolute right-0 z-50 mt-3 hidden w-48 overflow-hidden rounded-xl border border-gray-200 bg-white shadow-2xl ring-1 ring-black focus:outline-none"
               >
@@ -196,7 +196,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
