--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <div class="text-sm opacity-80">Equipment</div>
             </div>
             <div class="text-center">
-              <div class="text-2xl font-bold">7am - 12am</div>
+              <div class="text-2xl font-bold">7am - 12 midnight</div>
               <div class="text-sm opacity-80">Access</div>
             </div>
           </div>
@@ -1853,7 +1853,7 @@
                           Hours
                         </p>
                         <p class="text-sm font-medium text-gray-700">
-                          Monday - Sunday | 9:00 AM - 12:00 AM
+                          Monday - Sunday | 7:00 AM - 11:59 PM
                         </p>
                       </div>
                     </div>
@@ -2702,14 +2702,8 @@
             </h3>
             <ul class="flex grid space-y-2 text-sm">
               <span class="text-gray-300"><b>Monday - Sunday:</b></span>
-              <span class="text-gray-400">9:00 AM - 11:59 AM</span>
+              <span class="text-gray-400">7:00 AM - 11:59 PM</span>
             </ul>
-            <!-- <div class="text-sm bg-orange-800 p-3 rounded">
-              <p class="text-orange-100 font-medium pb-2">Note:</p>
-              <p class="text-orange-100">
-                We are open every day from 9:00 AM to 11:59 PM only.
-              </p>
-            </div> -->
           </div>
 
           <div class="space-y-4">
