--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -264,9 +264,9 @@
           data-listemptytexts="::No upcoming schedules yet::No past schedules yet"
           data-listtitletexts="[]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]"
           data-listdatasortby="[]::[name//name//name//date//date]::[name//name//name//date//date]"
-          data-listitembtnids="[]::[reservationViewDetailsBtn//reservationVoidBtn]::[reservationViewDetailsBtn//reservationVoidBtn]"
-          data-listitembtntexts="[]::[View Details [-⚙️-]//Void [-📕-]]::[View Details [-⚙️-]//Void [-📕-]]"
-          data-listitembtncolors="[]::[orange//red]::[orange//red]"
+          data-listitembtnids="[]::[]::[]"
+          data-listitembtntexts="[]::[]::[]"
+          data-listitembtncolors="[]::[]::[]"
           data-sectiontwotitletexts="Quick Reservation::Click a date in the live calendar tab"
           data-sectiontwoemptylist="No selected date yet"
           data-sectiontwobtntext="Process Reservation Date"
@@ -391,15 +391,15 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="System Permissions::System Roles::System Users::System Logs"
-          data-subtitles="All Permissions::All Roles::All Users::All Logs"
+          data-tabtitles="System Users::System Logs"
+          data-subtitles="All Users::All Logs"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="No permissions yet::No roles yet::No users yet::No logs yet"
-          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module(s)//User Action//Action Date and Time]"
-          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[actionDetailsBtn]"
-          data-listitembtntexts="[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[Update [-🖊️-]//Delete [-🗑️-]]::[Details [-🔧-]]"
-          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[gray]"
+          data-listemptytexts="No users yet::No logs yet"
+          data-listtitletexts="[User ID//User//User Role]::[User ID//User//Module(s)//User Action//Action Date and Time]"
+          data-listitembtnids="[userUpdateBtn//userDeleteBtn]::[actionDetailsBtn]"
+          data-listitembtntexts="[Update [-🖊️-]//Delete [-🗑️-]]::[Details [-🔧-]]"
+          data-listitembtncolors="[blue//red]::[gray]"
         ></div>
       </section>
 
