--- a/src/html/terms/index.html
+++ b/src/html/terms/index.html
@@ -490,14 +490,8 @@
             </h3>
             <ul class="flex grid space-y-2 text-sm">
               <span class="text-gray-300"><b>Monday - Sunday:</b></span>
-              <span class="text-gray-400">9:00 AM - 11:59 AM</span>
+              <span class="text-gray-400">7:00 AM - 11:59 PM</span>
             </ul>
-            <!-- <div class="text-sm bg-orange-800 p-3 rounded">
-              <p class="text-orange-100 font-medium pb-2">Note:</p>
-              <p class="text-orange-100">
-                We are open every day from 9:00 AM to 11:59 PM only.
-              </p>
-            </div> -->
           </div>
 
           <div class="space-y-4">
