--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -532,7 +532,7 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="/src/html/dashboard/index.html"
+                  href="/about"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   About Us
@@ -540,7 +540,7 @@
               </li>
               <li>
                 <a
-                  href="/src/html/about/index.html"
+                  href="/privacy"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   Privacy Policy
@@ -548,7 +548,7 @@
               </li>
               <li>
                 <a
-                  href="/src/html/terms/index.html"
+                  href="/terms"
                   class="text-gray-400 transition-colors hover:text-white"
                 >
                   Terms of Service
@@ -674,13 +674,13 @@
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
               <a
-                href="/src/html/privacy/index.html"
+                href="/privacy"
                 class="text-sm transition-colors hover:text-white"
               >
                 Privacy Policy
               </a>
               <a
-                href="/src/html/terms/index.html"
+                href="/terms"
                 class="text-sm transition-colors hover:text-white"
               >
                 Terms of Service
