--- a/src/html/privacy/index.html
+++ b/src/html/privacy/index.html
@@ -123,7 +123,7 @@
                 class="flex items-center overflow-hidden rounded-xl shadow-lg"
               >
                 <a
-                  href="/src/html/login/index.html"
+                  href="/login"
                   class="-mx-2 flex transform items-center gap-3 bg-gradient-to-r from-yellow-500 to-orange-500 px-8 py-3 font-bold text-white transition-all duration-300 hover:scale-105 hover:from-orange-500 hover:to-red-500"
                 >
                   <svg
@@ -258,7 +258,7 @@
         <!-- mobile view: login dropdown options -->
         <div id="mobile-menu" class="mt-6 hidden space-y-3 lg:hidden">
           <a
-            href="/src/html/login/index.html"
+            href="/login"
             class="block w-full rounded-xl bg-gradient-to-r from-yellow-500 to-orange-600 px-6 py-3 text-center font-bold text-white shadow-lg"
           >
             <!-- 🔑 CLIENT -->
@@ -569,21 +569,21 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="/src/html/about/index.html"
+                  href="/about"
                   class="text-gray-400 transition-colors hover:text-white"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/html/privacy/index.html"
+                  href="/privacy"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Privacy Policy</a
                 >
               </li>
               <li>
                 <a
-                  href="/src/html/terms/index.html"
+                  href="/terms"
                   class="text-gray-400 transition-colors hover:text-white"
                   >Terms of Service</a
                 >
@@ -716,12 +716,12 @@
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
               <a
-                href="/src/html/privacy/index.html"
+                href="/privacy"
                 class="text-sm transition-colors hover:text-white"
                 >Privacy Policy</a
               >
               <a
-                href="/src/html/terms/index.html"
+                href="/terms"
                 class="text-sm transition-colors hover:text-white"
                 >Terms of Service</a
               >
