--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -531,28 +531,13 @@
             <h3 class="border-b border-gray-600 pb-2 text-lg font-semibold">Quick Links</h3>
             <ul class="space-y-2">
               <li>
-                <a
-                  href="/about"
-                  class="text-gray-400 transition-colors hover:text-white"
-                >
-                  About Us
-                </a>
+                <a href="/about" class="text-gray-400 transition-colors hover:text-white">About Us</a>
               </li>
               <li>
-                <a
-                  href="/privacy"
-                  class="text-gray-400 transition-colors hover:text-white"
-                >
-                  Privacy Policy
-                </a>
+                <a href="/privacy" class="text-gray-400 transition-colors hover:text-white">Privacy Policy</a>
               </li>
               <li>
-                <a
-                  href="/terms"
-                  class="text-gray-400 transition-colors hover:text-white"
-                >
-                  Terms of Service
-                </a>
+                <a href="/terms" class="text-gray-400 transition-colors hover:text-white">Terms of Service</a>
               </li>
             </ul>
           </div>
@@ -673,18 +658,8 @@
               &copy; 2025 Fitworx Gym. All rights reserved.
             </p>
             <div class="order-1 flex space-x-4 md:order-2">
-              <a
-                href="/privacy"
-                class="text-sm transition-colors hover:text-white"
-              >
-                Privacy Policy
-              </a>
-              <a
-                href="/terms"
-                class="text-sm transition-colors hover:text-white"
-              >
-                Terms of Service
-              </a>
+              <a href="/privacy" class="text-sm transition-colors hover:text-white">Privacy Policy</a>
+              <a href="/terms" class="text-sm transition-colors hover:text-white">Terms of Service</a>
             </div>
           </div>
         </div>
