--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -177,7 +177,7 @@
           data-subtitle="Customer Account Manager"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Register New Customer [-💪-]"
-          data-subbtntext="Logs [-📜-]"
+          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
@@ -214,7 +214,7 @@
           data-title="Check-Ins"
           data-subtitle="Customer Attendance Tracker"
           data-middletext="<div id='liveDate'></div>"
-          data-subbtntext="Logs [-📜-]"
+          <!-- removed logs sub button -->
         ></div>
         <div id="section-stats"></div>
         <div
@@ -246,7 +246,7 @@
           data-title="Reservations"
           data-subtitle="Realtime Calendar"
           data-middletext="<div id='liveDate'></div>"
-          data-mainbtntext="Manual Reserve Facility [-🛕-]"
+          <!-- removed Manual Reserve Facility main button -->
         ></div>
         <div
           id="section-stats"
@@ -316,7 +316,7 @@
           data-subtitle="Product Catalog"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Add Product [-🧊-]"
-          data-subbtntext="Logs [-📜-]"
+          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
@@ -348,7 +348,7 @@
           data-subtitle="Transaction Processing"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Consolidate Transactions [-💳-]"
-          data-subbtntext="Logs [-📜-]"
+          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
@@ -480,8 +480,8 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="User Preferences"
-          data-subtitles="Choose modules and basic options"
+          data-tabtitles="Basic options"
+          data-subtitles="User Preferences"
           data-sectiononesettings="1"
         ></div>
       </section>
