add facility terms

--- a/src/html/terms/index.html
+++ b/src/html/terms/index.html
@@ -328,6 +328,71 @@
             class="rounded-xl bg-orange-50 p-6 shadow-md transition-transform duration-300 hover:-translate-y-2 hover:shadow-lg"
           >
             <h2 class="mb-4 flex items-center text-2xl font-semibold text-orange-800">
+              <i class="fas fa-basketball-ball mr-3 text-orange-500"></i>
+              Facility Terms
+            </h2>
+            <div class="space-y-4 text-gray-700">
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Wear proper, non-marking athletic shoes at all times on the courts. Slippers, sandals, or hard-soled
+                  street shoes are not allowed.
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Respect court schedules and active reservations. If others are waiting, implement fair play rotation or
+                  observe a reasonable time limit per game (e.g., winner-stays for one game only when crowded).
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  No food or colored drinks on the court surface. Only water in sealed bottles is allowed courtside. Keep
+                  all trash in the designated bins.
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Do not hang on rims or net, move equipment without staff approval, or engage in rough play. Report any
+                  unsafe conditions or damaged equipment to staff immediately.
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Keep the court area clear. Personal bags and items should be placed on the benches or designated
+                  storage areas—not on the playing surface.
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Follow staff instructions at all times. The gym reserves the right to end play or reassign courts to
+                  honor reservations, events, or safety concerns.
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="rounded-xl bg-orange-50 p-6 shadow-md transition-transform duration-300 hover:-translate-y-2 hover:shadow-lg"
+          >
+            <h2 class="mb-4 flex items-center text-2xl font-semibold text-orange-800">
               <i class="fas fa-credit-card mr-3 text-orange-500"></i>
               Payment Terms
             </h2>
